Mark strings for translation

--- a/bernard/templates/dashboard/base.html
+++ b/bernard/templates/dashboard/base.html
@@ -1,10 +1,10 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}{% load i18n %}<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}Dashboard{% endblock %}</title>
+    <title>{% block title %}{% trans 'Dashboard' %}{% endblock %}</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.2.1/css/flag-icon.min.css">
@@ -29,19 +29,19 @@
       <div class="navbar-menu">
         <div class="navbar-start">
           <div class="navbar-item has-dropdown is-hoverable">
-              <a class="navbar-link {% block nav-drivers %}{% endblock %}" href="{% url 'drivers' %}">Drivers</a>
+            <a class="navbar-link {% block nav-drivers %}{% endblock %}" href="{% url 'drivers' %}">{% trans 'Drivers' %}</a>
             <div class="navbar-dropdown">
-              <a class="navbar-item" href="{% url 'drivers_new' %}">Add</a>
+              <a class="navbar-item" href="{% url 'drivers_new' %}">{% trans 'Add' %}</a>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable">
-              <a class="navbar-link {% block nav-stops %}{% endblock %}" href="{% url 'stops' %}">Stops</a>
+            <a class="navbar-link {% block nav-stops %}{% endblock %}" href="{% url 'stops' %}">{% trans 'Stops' %}</a>
             <div class="navbar-dropdown">
-              <a class="navbar-item" href="{% url 'stops_new' %}">Add</a>
+              <a class="navbar-item" href="{% url 'stops_new' %}">{% trans 'Add' %}</a>
             </div>
           </div>
 
-          <a class="navbar-item {% block nav-route %}{% endblock %}" href="{% url 'route' %}">Route</a>
+          <a class="navbar-item {% block nav-route %}{% endblock %}" href="{% url 'route' %}">{% trans 'Route' %}</a>
         </div>
 
         <div class="navbar-end">
@@ -61,7 +61,7 @@
           </a>
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-light" href="{% url 'logout' %}">Log out</a>
+              <a class="button is-light" href="{% url 'logout' %}">{% trans 'Log out' %}</a>
             </div>
           </div>
         </div>
