--- a/bernard/templates/dashboard/drivers_new.html
+++ b/bernard/templates/dashboard/drivers_new.html
@@ -1,6 +1,6 @@
-{% extends 'dashboard/base.html' %}
+{% extends 'dashboard/base.html' %}{% load i18n %}
 
-{% block title %}Add driver{% endblock %}
+{% block title %}{% trans 'Add driver' %}{% endblock %}
 
 {% block main %}
 <section class="section">
@@ -16,20 +16,20 @@
         <form action="{% url 'drivers_new' %}" method="post">
           {% csrf_token %}
           <div class="field">
-            <div class="label">Name</div>
+            <div class="label">{% trans 'Name' %}</div>
             <div class="control">
               <input class="input" type="text" name="name">
             </div>
           </div>
           <div class="field">
-            <div class="label">Start address</div>
+            <div class="label">{% trans 'Start address' %}</div>
             <div class="control">
               <input id="autocomplete" onFocus="geolocate()" class="input" type="text" name="start_address">
             </div>
           </div>
           <div class="field">
             <div class="control">
-              <input class="button is-primary" type="submit" value="Save">
+              <input class="button is-primary" type="submit" value="{% trans 'Save' %}">
             </div>
           </div>
         </form>
