Fix next_path from not being redirected to during login

--- a/bernard/templates/dashboard/login.html
+++ b/bernard/templates/dashboard/login.html
@@ -31,6 +31,7 @@
           {% endfor %}
           <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
+            <input type="hidden" name="next" value="{{ next_path }}">
             <div class="field">
               <p class="control has-icons-left">
                 <input class="input" type="text" name="username" placeholder="{% trans 'Username' %}">
