--- a/bernard/templates/dashboard/stops.html
+++ b/bernard/templates/dashboard/stops.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/base.html' %}{% load l10n %}
+{% extends 'dashboard/base.html' %}{% load i18n %}{% load l10n %}
 
 {% block nav-stops %}is-active{% endblock %}
 
@@ -83,7 +83,9 @@ $('article.address').hover(animateMarker, unAnimateMarker);
 
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key={{ googlemaps_key }}&callback=initMap" async defer></script>
+{% get_current_language as current_language %}
+
+<script src="https://maps.googleapis.com/maps/api/js?key={{ googlemaps_key }}&callback=initMap&language={{ current_language }}" async defer></script>
 {% endlocalize %}
 
 {% endblock %}
