Rename view function names to a convention

--- a/bernard/templates/dashboard/route.html
+++ b/bernard/templates/dashboard/route.html
@@ -19,7 +19,7 @@
         <div class="timeline-item">
           <div class="timeline-marker"></div>
           <div class="timeline-content">
-            <p class="heading">AABBCC2123</p>
+            <p class="heading">{{ stop.name }}</p>
             <p>{{ stop }}</p>
           </div>
         </div>
@@ -53,7 +53,6 @@ function initMap() {
     map: map,
     title: 'Hello World!'
   });
-  
 }
 
 
