--- a/bernard/templates/dashboard/drivers.html
+++ b/bernard/templates/dashboard/drivers.html
@@ -69,6 +69,12 @@ function initMap() {
   }
 
   map.fitBounds(bounds);
+
+  var listener = google.maps.event.addListener(map, "idle", function() {
+    if (map.getZoom() > 12)
+      map.setZoom(12);
+    google.maps.event.removeListener(listener);
+  });
 }
 
 function animateMarker(e) {
