Prevent duplication of cached distances

--- a/bernard/templates/dashboard/route.html
+++ b/bernard/templates/dashboard/route.html
@@ -88,7 +88,7 @@ function initMap() {
     if (status === 'OK') {
       directionsRenderer.setDirections(response);
     } else {
-      window.alert('Directions request failed due to ' + status);
+      console.log('Directions request failed due to ' + status);
     }
   });
 
