--- a/bernard/templates/dashboard/base.html
+++ b/bernard/templates/dashboard/base.html
@@ -78,7 +78,7 @@
           </a>
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-light" href="{% url 'logout' %}">{% trans 'Log out' %}</a>
+              <a class="button is-light is-rounded" href="{% url 'logout' %}">{% trans 'Log out' %}</a>
             </div>
           </div>
         </div>
