--- a/bernard/templates/dashboard/base.html
+++ b/bernard/templates/dashboard/base.html
@@ -47,6 +47,20 @@
         <div class="navbar-end">
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
+              <span class="icon"><i class="fas fa-bug"></i></span>
+            </a>
+            <div class="navbar-dropdown">
+              <div class="navbar-item">
+                <div class="content">
+                  {% trans "Something doesn't work?" %}<br/>
+                  <a href='mailto:engineering@levfinder.se'>{% trans 'Tell us!' %}</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
               <span class="icon"><i class="fas fa-language"></i></span>
             </a>
             <div class="navbar-dropdown">
