--- a/bernard/templates/dashboard/drivers.html
+++ b/bernard/templates/dashboard/drivers.html
@@ -53,7 +53,13 @@ function initMap() {
 
   map = new google.maps.Map(document.getElementById('map'), {
     center: {lat: 57.6962992, lng: 11.9613259 },
-    zoom: 12
+    zoom: 12,
+    zoomControl: true,
+    mapTypeControl: true,
+    scaleControl: false,
+    streetViewControl: false,
+    rotateControl: false,
+    fullscreenControl: false,
   });
 
   var locations = {
