--- a/bernard/templates/dashboard/drivers_new.html
+++ b/bernard/templates/dashboard/drivers_new.html
@@ -39,10 +39,32 @@
           </div>
 
           <div class="field">
+            <div class="label">{% trans 'Phone' %}</div>
+            <div class="control">
+              <input class="input" type="phone" name="phone">
+            </div>
+          </div>
+
+          <div class="field">
+            <div class="control">
+              <div class="label">{% trans 'Type' %}</div>
+              <label class="radio">
+                <input type="radio" name="driver_type">
+                {% trans 'Road' %}
+              </label>
+              <label class="radio">
+                <input type="radio" name="driver_type">
+                {% trans 'Bicycle' %}
+              </label>
+            </div>
+          </div>
+
+          <div class="field">
             <div class="control">
               <input class="button is-primary" type="submit" value="{% trans 'Save' %}">
             </div>
           </div>
+
         </form>
       </div>
     </div>
