--- a/bernard/templates/dashboard/route.html
+++ b/bernard/templates/dashboard/route.html
@@ -7,6 +7,7 @@
 <div class="columns is-gapless" style="height: calc(100vh - 3.25rem);">
   <div class="column is-one-thirds media-items">
     <div class="section">
+      {% if path %}
       <div class="content">
         <p><strong>Full route:</strong> {{ distance }}</p>
       </div>
@@ -35,6 +36,9 @@
           <span class="tag">{% trans 'End' %}</span>
         </header>
       </div>
+      {% else %}
+        No route found
+      {% endif %}
     </div>
   </div>
 
