--- a/bernard/templates/dashboard/base.html
+++ b/bernard/templates/dashboard/base.html
@@ -52,7 +52,7 @@
             <div class="navbar-dropdown">
               <div class="navbar-item">
                 <div class="content">
-                  {% trans "Something doesn't work?" %}<br/>
+                  {% trans 'Did something break?' %}<br/>
                   <a href='mailto:engineering@levfinder.se'>{% trans 'Tell us!' %}</a>
                 </div>
               </div>
