--- a/bernard/templates/dashboard/stops.html
+++ b/bernard/templates/dashboard/stops.html
@@ -7,40 +7,46 @@
 <div class="columns is-gapless" style="height: calc(100vh - 3.25rem);">
   <div class="column is-one-thirds media-items">
     <div class="section">
-    {% if stops %}
-    {% for stop in stops %}
-    <article class="media address" id="{{ stop.id }}">
-      <div class="media-content">
-        <div class="content">
-          <p><strong>{{ stop.name }}</strong><br/><small>{{ stop.address }}</small></p>
-        </div>
+      {% for message in messages %}
+      <div class="notification is-{{ message.tags }}">
+        {{ message }}
       </div>
-      <nav class="level">
-        <div class="level-left">
-        </div>
-        <div class="level-right">
-          <div class="level-item">
-            <form action="{% url 'stop' stop.id %}" method="post">
-              {% csrf_token %}
-              <input type="hidden" name="_method" value="DELETE">
-              <button class="button" type="submit">
-                <span class="icon">
-                  <i class="fas fa-trash"></i>
-                </span>
-              </button>
-            </form>
+      {% endfor %}
+
+      {% if stops %}
+      {% for stop in stops %}
+      <article class="media address" id="{{ stop.id }}">
+        <div class="media-content">
+          <div class="content">
+            <p><strong>{{ stop.name }}</strong><br/><small>{{ stop.address }}</small></p>
           </div>
         </div>
-      </nav>
-    </article>
-    {% endfor %}
-    {% else %}
+        <nav class="level">
+          <div class="level-left">
+          </div>
+          <div class="level-right">
+            <div class="level-item">
+              <form action="{% url 'stop' stop.id %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="_method" value="DELETE">
+                <button class="button" type="submit">
+                  <span class="icon">
+                    <i class="fas fa-trash"></i>
+                  </span>
+                </button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </article>
+      {% endfor %}
+
+      {% else %}
       <div class="has-text-centered">
-        <div class="content">{% trans 'No stops found' %}</div>
         <a class="button is-rounded" href="{% url 'stops_new' %}">{% trans 'Add new stop' %}</a>
       </div>
-    {% endif %}
-  </div>
+      {% endif %}
+    </div>
   </div>
 
   <div class="column is-two-thirds">
