--- a/bernard/templates/dashboard/drivers_new.html
+++ b/bernard/templates/dashboard/drivers_new.html
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-half">
-        <h1 class="title">Add driver</h1>
+        <h1 class="title">{% trans 'Add driver' %}</h1>
         {% for message in messages %}
         <div class="notification is-{{ message.tags }}">
           {{ message }}
