--- a/bernard/templates/dashboard/stops_new.html
+++ b/bernard/templates/dashboard/stops_new.html
@@ -40,7 +40,7 @@
 
           <div class="field">
             <div class="control">
-              <input class="button is-primary" type="submit" value="{% trans 'Save' %}">
+              <input class="button is-primary is-rounded" type="submit" value="{% trans 'Save' %}">
             </div>
           </div>
         </form>
