--- a/bernard/templates/dashboard/drivers_new.html
+++ b/bernard/templates/dashboard/drivers_new.html
@@ -61,7 +61,7 @@
 
           <div class="field">
             <div class="control">
-              <input class="button is-primary" type="submit" value="{% trans 'Save' %}">
+              <input class="button is-primary is-rounded" type="submit" value="{% trans 'Save' %}">
             </div>
           </div>
 
