--- a/bernard/templates/dashboard/login.html
+++ b/bernard/templates/dashboard/login.html
@@ -19,16 +19,19 @@
         <div class="column is-two-fifths">
           <a href="https://levfinder.se"><h1 class="title">Levfinder</h1></a>
           <p class="subtitle">{% trans 'Log in to dashboard' %}</p>
+
           {% if not lf_env == 'prod' %}
           <div class="notification is-warning">
             This is a <strong>{{ lf_env }}</strong> server. Expect things to spontaneously catch fire and explode
           </div>
           {% endif %}
+
           {% for message in messages %}
           <div class="notification is-{{ message.tags }}">
             {{ message }}
           </div>
           {% endfor %}
+
           <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
             <input type="hidden" name="next" value="{{ next_path }}">
@@ -50,7 +53,7 @@
             </div>
             <div class="field">
               <div class="control">
-                <input type="submit" class="button is-success" value="{% trans 'Log in' %}">
+                <input type="submit" class="button is-success is-rounded" value="{% trans 'Log in' %}">
               </div>
             </div>
           </form>
