--- a/bernard/templates/dashboard/route.html
+++ b/bernard/templates/dashboard/route.html
@@ -71,7 +71,7 @@
           <div class="field-body">
             <div class="field">
               <div class="control">
-                <button type="submit" class="button is-primary">{% trans 'Optimise' %}</button>
+                <button type="submit" class="button is-primary is-rounded">{% trans 'Optimise' %}</button>
               </div>
             </div>
           </div>
