--- a/bernard/static/dashboard/styles.css
+++ b/bernard/static/dashboard/styles.css
@@ -1,5 +1,5 @@
 body, button, input, select, textarea {
-    font-family: Ubuntu, sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 .media-items {
