--- a/bernard/templates/dashboard/login.html
+++ b/bernard/templates/dashboard/login.html
@@ -1,4 +1,4 @@
-{% load i18n %}<!DOCTYPE html>
+{% load static %}{% load i18n %}<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -6,8 +6,11 @@
 
     <title>{% trans 'Log in' %}</title>
 
+    <link rel="shortcut icon" type="image/png" href="{% static 'dashboard/favicon.ico' %}"/>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'dashboard/styles.css' %}">
 
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
